feat(TUP-19123): Manage connections: improvements (2) (#1354)
feat(TUP-19123): Manage connections: improvements (2) 
https://jira.talendforge.org/browse/TUP-19123