@@ -53,15 +53,19 @@ public class RepositoryFactoryProvider {
                 hiddenRepository = hiddenRepos.split(";"); //$NON-NLS-1$
             }
 
+            boolean isPoweredByTalend = false;
+            IBrandingService brandingService = (IBrandingService) GlobalServiceRegister.getDefault()
+                    .getService(IBrandingService.class);
+            isPoweredByTalend = brandingService.isPoweredbyTalend();
             for (IConfigurationElement current : extension) {
                 try {
                     String only4TalendStr = current.getAttribute("only4Talend"); //$NON-NLS-1$
-                    if (Boolean.valueOf(only4TalendStr)) {
-                        IBrandingService brandingService = (IBrandingService) GlobalServiceRegister.getDefault()
-                                .getService(IBrandingService.class);
-                        if (!brandingService.isPoweredbyTalend()) {
-                            continue;
-                        }
+                    if (Boolean.valueOf(only4TalendStr) && !isPoweredByTalend) {
+                        continue;
+                    }
+                    String only4OemStr = current.getAttribute("only4Oem"); //$NON-NLS-1$
+                    if (Boolean.valueOf(only4OemStr) && isPoweredByTalend) {
+                        continue;
                     }
                     IRepositoryFactory currentAction = (IRepositoryFactory) current.createExecutableExtension("class"); //$NON-NLS-1$
                     currentAction.setId(current.getAttribute("id")); //$NON-NLS-1$
@@ -75,7 +79,8 @@ public class RepositoryFactoryProvider {
                                 currentLoginField.getAttribute("name"), //$NON-NLS-1$
                                 currentLoginField.getAttribute("defaultValue"), //$NON-NLS-1$
                                 new Boolean(currentLoginField.getAttribute("required")), //$NON-NLS-1$
-                                new Boolean(currentLoginField.getAttribute("password"))); //$NON-NLS-1$
+                                new Boolean(currentLoginField.getAttribute("password")), //$NON-NLS-1$
+                                Boolean.valueOf(currentLoginField.getAttribute("readonly"))); //$NON-NLS-1$
                         currentAction.getFields().add(key);
                     }
 
